--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           that combine analytical thinking with practical development skills.
         </p>
 
-        <a href="./thishalini_resume_pd.pdf" target="_blank" rel="noopener noreferrer" class="resume-btn fade-in-left delay-6" aria-label="Download Resume PDF">
+        <a href="./Thishalini_kamireddy_resume.pdf" target="_blank" rel="noopener noreferrer" class="resume-btn fade-in-left delay-6" aria-label="Download Resume PDF">
           <i class="fas fa-download" aria-hidden="true"></i> Download Resume
         </a>
       </div>
@@ -375,4 +375,5 @@
   <script src="main.js"></script>
 </body>
 </html>
+
 
