--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
       <!-- Right: Profile Photo -->
       <div class="hero-photo fade-in-right delay-2">
-        <img src="./thishalini_profile.png" alt="Kamireddy Thishalini - Portfolio Photo" loading="lazy" />
+        <img src="./Thishalini_profile_image-removebg-preview.png" alt="Kamireddy Thishalini - Portfolio Photo" loading="lazy" />
       </div>
     </div>
   </section>
@@ -375,5 +375,6 @@
   <script src="main.js"></script>
 </body>
 </html>
+
 
 
