--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
           <li>Created dashboards for business insights</li>
         </ul>
 
-        <a href="https://github.com/thishalinireddy" target="_blank" rel="noopener noreferrer" class="project-link" aria-label="View Pizza Sales Analysis project on GitHub">
+        <a href="https://github.com/thishalinireddy/pizza_sales_analysis.git">
           <i class="fab fa-github" aria-hidden="true"></i> View on GitHub
         </a>
       </div>
@@ -207,7 +207,7 @@
           <li>Visualized trends and top-performing products</li>
         </ul>
 
-        <a href="https://github.com/thishalinireddy" target="_blank" rel="noopener noreferrer" class="project-link" aria-label="View Customer Purchase Behavior Analysis project on GitHub">
+        <a href="https://github.com/thishalinireddy/Purchase_Analysis.git">
           <i class="fab fa-github" aria-hidden="true"></i> View on GitHub
         </a>
       </div>
@@ -375,6 +375,7 @@
   <script src="main.js"></script>
 </body>
 </html>
+
 
 
 
